[package]
name = "apiso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["time_0_3"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "time", "uuid", "postgres"] }
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
